#
# Copyright (c) 2018 Doyub Kim
#
# I am making my contributions/submissions to this project solely in my personal
# capacity and am not conveying any rights to any intellectual property of any
# third parties.
#

cmake_minimum_required(VERSION 2.8.9)
project (wave_fluid_simulation)

add_executable(wave_fluid_simulation  main.cpp)
